--- a/MinChain/project.json
+++ b/MinChain/project.json
@@ -5,6 +5,9 @@
   },
 
   "dependencies": {
+    "Microsoft.Extensions.Logging": "1.1.0",
+    "Microsoft.Extensions.Logging.Abstractions": "1.1.0",
+    "Microsoft.Extensions.Logging.Console": "1.1.0",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.1.0"
