--- a/MinChain/project.json
+++ b/MinChain/project.json
@@ -12,6 +12,7 @@
       "type": "platform",
       "version": "1.1.0"
     },
+    "Newtonsoft.Json": "9.0.1",
     "ZeroFormatter": "1.6.1"
   },
 
