--- a/MinChain/MinChain.csproj
+++ b/MinChain/MinChain.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.4" />
   </ItemGroup>
 
 </Project>
